<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#F1F1F1"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/nameH"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />


    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameH"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/height"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/height"
        android:inputType="numberDecimal"
        android:paddingLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/date"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck"
        tools:layout_editor_absoluteX="37dp" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/weight"
        android:background="@drawable/input_background"
        android:paddingLeft="10dp"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/height"
        tools:layout_editor_absoluteX="37dp" />

    <Button
        android:id="@+id/save"
        android:layout_width="307dp"
        android:layout_height="70dp"
        android:layout_marginTop="88dp"
        android:backgroundTint="@color/black"
        android:text="@string/btnsave"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sex"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/sex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/sex"
        android:layout_width="178dp"
        android:layout_height="91dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/sexmen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/men"
            tools:ignore="MissingConstraints" />

        <RadioButton
            android:id="@+id/sexwoman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/women"
            tools:ignore="MissingConstraints" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>