<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#F1F1F1"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/exit"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:background="#00000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_exit_to_app_24"
        app:tint="@color/black" />

    <ImageButton
        android:id="@+id/prof"
        android:layout_width="363dp"
        android:layout_height="93dp"
        android:layout_marginTop="32dp"
        android:onClick="onButtonConfig"
        android:background="@drawable/degrade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameH"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/prof2"
        android:layout_width="363dp"
        android:layout_height="93dp"
        android:layout_marginTop="164dp"
        android:background="@drawable/degrade"
        android:onClick="onButtonConfig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameH"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:text="@string/welcome"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/nameH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="28dp"
        android:text="Name"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/welcome"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/profile"
        android:layout_width="108dp"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/prof" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="34dp"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="@+id/prof"
        app:layout_constraintTop_toTopOf="@+id/prof"
        app:srcCompat="@drawable/ic_baseline_account_box_24" />

    <TextView
        android:id="@+id/training"
        android:layout_width="110dp"
        android:layout_height="38dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:text="@string/training"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/prof2"
        app:layout_constraintTop_toTopOf="@+id/prof2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="37dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/prof2"
        app:layout_constraintTop_toTopOf="@+id/prof2"
        app:srcCompat="@drawable/ic_baseline_directions_run_24" />


</androidx.constraintlayout.widget.ConstraintLayout>